LPS-112856 portal-language-lang: gradle buildLang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Afegeix l'estimació de disponibilitat
 add-billing-address=Afegeix l'adreça de facturació
 add-block=Afegeix un bloqueig
 add-blog-entry=Afegeix una entrada de blog
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Afegeix una adreça d'interès
 add-calendar=Afegeix Calendari
 add-calendar-booking=Afegeix Esdeveniment
@@ -361,6 +362,7 @@ add-document-type=Afegeix un tipus de document
 add-domain=Afegeix un domini
 add-draft=Afegeix esborrany
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Afegeix elements
 add-event=Afegeix un esdeveniment
 add-existing-account=Afegeix un compte existent
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Segur que voleu desact
 are-you-sure-you-want-to-deactivate-the-selected-users=Segur que voleu desactivar els usuaris seleccionats?
 are-you-sure-you-want-to-deactivate-the-user=Segur que voleu desactivar l'usuari?
 are-you-sure-you-want-to-deactivate-this-user=Segur que voleu desactivar aquest usuari?
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Segur que voleu suprimir l'aplicació? No hi ha autoritzacions ni testimonis associats.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Segur que voleu suprimir l'aplicació? Aquesta acció revoca 1 autorització i els testimonis associats.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Segur que voleu suprimir l'aplicació? Aquesta acció revoca {0} autoritzacions i els testimonis associats.
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blogs
 blogs-util=Utilitat de blogs
 blogs-util-help=Proporciona mètodes d'utilitat per accedir a les entrades actuals del blog.
 blogs-with-this-category=Blogs amb aquesta categoria
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Cos i imatge
 body-bg=Fons del cos
 body-color=Color del cos
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filtra per tipus d'element
 filter-by-state=Filtra per estat
 filter-by-subtype=Filtra per subtipus
 filter-by-type=Filtra per tipus
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filtra la col·lecció
 filter-contacts=Filtra Contactes
 filter-field=Camp a filtrar
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Rols
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Selector de rols
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=Editor RSS
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=Administrador SAML
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Experiment de segments
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Simulació de segments
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segments
@@ -7730,6 +7737,7 @@ search-documents=Cerca documents
 search-engine-helper-configuration-name=Aplicació d'ajuda del motor
 search-engine-optimization=Optimitzación dels paràmetres per als motors de recerca
 search-engine-vendor=Proveïdor del motor de cerca
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Busca un article similar.
 search-for-account=Cerca el compte
 search-for-an-assignee=Cerqueu un assignat
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Nom d'entrada SAP per defecte del sistema
 system-default-sap-entry-service-signatures=Signatures de servei d'entrada SAP per defecte del sistema
 system-ldap-configuration-name=Connexió
 system-maximum-number-of-tags-per-asset-description=Establiu el nombre màxim d'etiquetes que s'afegiran automàticament a un contingut únic. Establiu a 0 si no hi ha límit.
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Rols del sistema
 system-user-password-sap-entry-description=Descripció d'entrada SAP de la contrasenya d'usuari del sistema
 system-user-password-sap-entry-name=Nom d'entrada SAP de la contrasenya d'usuari del sistema
