--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Tilføj skøn over tilgængelighed (Automatic Translat
 add-billing-address=Tilføj faktureringsadresse (Automatic Translation)
 add-block=Add Block (Automatic Copy)
 add-blog-entry=Tilføj blog Entry
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Tilføj bogmærke
 add-calendar=Tilføj kalender (Automatic Translation)
 add-calendar-booking=Tilføj hændelse (Automatic Translation)
@@ -361,6 +362,7 @@ add-document-type=Tilføj dokumenttype
 add-domain=Tilføj domæne (Automatic Translation)
 add-draft=Tilføj kladde (Automatic Translation)
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Tilføj elementer (Automatic Translation)
 add-event=Tilføj begivenhed
 add-existing-account=Tilføj eksisterende firma (Automatic Translation)
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Er du sikker på, at d
 are-you-sure-you-want-to-deactivate-the-selected-users=Er du sikker på, at du vil deaktivere de valgte brugere? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-the-user=Er du sikker på, at du vil deaktivere brugeren? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Er du sikker på, at du vil deaktivere denne bruger? (Automatic Translation)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Er du sikker på, at du vil slette programmet? Der er ingen godkendelser eller tilknyttede tokens. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Er du sikker på, at du vil slette programmet? Disse handlinger tilbagekalder 1 godkendelse og tilknyttede tokens. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blogs (Kontrolpanel)
 blogs-util=Blogs Util (Automatic Translation)
 blogs-util-help=Indeholder hjælpeprogrammer til at få adgang til aktuelle blog-indtastninger. (Automatic Translation)
 blogs-with-this-category=Blogs with This Category (Automatic Copy)
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Krop og billede (Automatic Translation)
 body-bg=Brødtekst, Baggrund (Automatic Translation)
 body-color=Kropsfarve (Automatic Translation)
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filter by Item Type (Automatic Copy)
 filter-by-state=Filtrer efter stat (Automatic Translation)
 filter-by-subtype=Filtrer efter undertype (Automatic Translation)
 filter-by-type=Filtrer efter type (Automatic Translation)
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filtrer kontaktpersoner (Automatic Translation)
 filter-field=Filtrer felt (Automatic Translation)
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Roller
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Rollevælger (Automatic Translation)
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=RSS-udgiver (Automatic Translation)
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=SAML Admin (Automatic Translation)
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Eksperiment af segmenter (Automatic Translation)
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Simulering af segmenter (Automatic Translation)
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segmenter (Automatic Translation)
@@ -7730,6 +7737,7 @@ search-documents=Søg dokumenter
 search-engine-helper-configuration-name=Programhjælper (Automatic Translation)
 search-engine-optimization=Søgemaskineoptimisering (SEO)
 search-engine-vendor=Leverandør af søgemaskine (Automatic Translation)
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Søg efter en lignende artikel. (Automatic Translation)
 search-for-account=Søg efter konto (Automatic Translation)
 search-for-an-assignee=Søge efter en modtager (Automatic Translation)
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Navn på systemstandard for SAP-post (Automatic Tr
 system-default-sap-entry-service-signatures=Signaturer for systemstandard-SAP-posttjeneste (Automatic Translation)
 system-ldap-configuration-name=forbindelse (Automatic Translation)
 system-maximum-number-of-tags-per-asset-description=Angiv det maksimale antal mærker, der automatisk føjes til et enkelt aktiv. Angiv til 0, hvis der ikke er nogen grænse. (Automatic Translation)
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Websted Roller
 system-user-password-sap-entry-description=Beskrivelse af SAP-post for systembrugeradgangskode (Automatic Translation)
 system-user-password-sap-entry-name=Sap-postnavn for systembrugeradgangskode (Automatic Translation)
