--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Schätzung für Verfügbarkeit hinzufügen
 add-billing-address=Rechnungsadresse hinzufügen
 add-block=Block hinzufügen
 add-blog-entry=Blogeintrag hinzufügen
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Lesezeichen hinzufügen
 add-calendar=Kalender hinzufügen
 add-calendar-booking=Termin hinzufügen
@@ -361,6 +362,7 @@ add-document-type=Dokumententyp hinzufügen
 add-domain=Domain hinzufügen
 add-draft=Entwurf hinzufügen
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Elemente hinzufügen
 add-event=Ereignis hinzufügen
 add-existing-account=Vorhandenes Konto hinzufügen
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Möchten Sie die ausge
 are-you-sure-you-want-to-deactivate-the-selected-users=Sind Sie sicher, dass Sie die ausgewählten Nutzer deaktivieren möchten?
 are-you-sure-you-want-to-deactivate-the-user=Sind Sie sicher dass Sie den Benutzer deaktivieren möchten?
 are-you-sure-you-want-to-deactivate-this-user=Sind Sie sicher, dass Sie diesen Benutzer deaktivieren möchten?
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Sind Sie sicher, dass Sie die Anwendung löschen möchten? Es gibt keine Autorisierungen oder verbundene Tokens.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Sind Sie sicher, dass Sie die Anwendung löschen möchten? Diese Aktion macht 1 Autorisierung und verbundene Tokens ungültig.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Sind Sie sicher, dass Sie die Anwendung löschen möchten? Diese Aktion macht {0} Autorisierungen und verbundene Tokens ungültig.
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blogs
 blogs-util=Blogs-Util
 blogs-util-help=Stellt Hilfsmethoden zum Zugreifen auf aktuellen Blog-Einträge bereit.
 blogs-with-this-category=Blogs mit dieser Kategorie
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Inhalt und Bild
 body-bg=Textkörperhintergrund
 body-color=Textkörperfarbe
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filtern nach Elementtyp
 filter-by-state=Nach Status filtern
 filter-by-subtype=Nach Untertyp filtern
 filter-by-type=Nach Typ filtern
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Sammlung filtern
 filter-contacts=Kontakte filtern
 filter-field=Filterfeld
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Rollen
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Rollenauswahl
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=RSS-Herausgeber
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=SAML-Administration
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Segment-Experiment
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Simulation von Segmenten
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segmente
@@ -7730,6 +7737,7 @@ search-documents=Dokumente durchsuchen
 search-engine-helper-configuration-name=Engine-Assistent
 search-engine-optimization=Suchmaschinenoptimierung (SEO)
 search-engine-vendor=Suchmaschinen-Anbieter
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Ähnliche Artikel suchen
 search-for-account=Konto suchen
 search-for-an-assignee=Nach einem zugewiesenen Benutzers suchen
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Systemstandard SAP-Eintragsname
 system-default-sap-entry-service-signatures=Systemstandard SAP-Eintrag Service-Signaturen
 system-ldap-configuration-name=Verbindung
 system-maximum-number-of-tags-per-asset-description=Legen Sie die maximale Anzahl von Tags fest, die automatisch zu einem einzelnen Asset hinzugefügt werden. Wähle Sie "0", wenn es kein Limit gibt.
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Systemrollen
 system-user-password-sap-entry-description=Systembenutzerkennwort SAP-Eintragsbeschreibung
 system-user-password-sap-entry-name=Systembenutzerkennwort SAP-Eintragsname
