--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Añadir cálculo de disponibilidad
 add-billing-address=Añadir dirección de facturación
 add-block=Añadir bloque
 add-blog-entry=Añadir entrada de blog
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Añadir enlace
 add-calendar=Añadir Calendario
 add-calendar-booking=Añadir Evento
@@ -361,6 +362,7 @@ add-document-type=Añadir Tipo de Documento
 add-domain=Añadir dominio
 add-draft=Añadir borrador
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Añadir elementos
 add-event=Añadir evento
 add-existing-account=Añadir cuenta existente
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=¿Está seguro de que 
 are-you-sure-you-want-to-deactivate-the-selected-users=¿Está seguro de que desea desactivar a los usuarios seleccionados?
 are-you-sure-you-want-to-deactivate-the-user=¿Está seguro de que quiere desactivar el usuario?
 are-you-sure-you-want-to-deactivate-this-user=¿Está seguro de que quiere desactivar este usuario?
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=¿Está seguro de que quiere eliminar la aplicación? No hay autorizaciones ni tokens asociados.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=¿Está seguro de que quiere eliminar la aplicación? Esta acción revoca 1 autorización y los tokens asociados.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=¿Está seguro de que quiere eliminar la aplicación? Esta acción revoca {0} autorizaciones y los tokens asociados.
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blogs
 blogs-util=Utilidad de blogs
 blogs-util-help=Proporciona métodos de utilidad para acceder a las entradas del blog actual.
 blogs-with-this-category=Blogs con esta categoría
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Cuerpo e imagen
 body-bg=Fondo del cuerpo
 body-color=Color del cuerpo
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filtrar por tipo de artículo
 filter-by-state=Filtrar por estado
 filter-by-subtype=Filtrar por subtipo
 filter-by-type=Filtrar por tipo
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filtrar colección
 filter-contacts=Filtrar contactos
 filter-field=Campo de filtro
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Roles
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Selector de roles
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=Publicador RSS
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=Administrador de SAML
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Experimento de segmentos
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Simulación de segmentos
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segmentos
@@ -7730,6 +7737,7 @@ search-documents=Buscar documentos
 search-engine-helper-configuration-name=Asistente del motor
 search-engine-optimization=Optimización de búsquedas
 search-engine-vendor=Proveedor de motor de búsqueda
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Buscar un artículo similar.
 search-for-account=Buscar cuenta
 search-for-an-assignee=Buscar usuario asignado
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Nombre de entrada de SAP por defecto del sistema
 system-default-sap-entry-service-signatures=Firmas del servicio de entrada de SAP por defecto del sistema
 system-ldap-configuration-name=Conexión
 system-maximum-number-of-tags-per-asset-description=Establece el número máximo de etiquetas que se añadirán automáticamente a un único activo. Establezca este valor en 0 si no hay ningún límite.
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Roles de Sistema
 system-user-password-sap-entry-description=Descripción de la entrada de SAP de contraseña de usuario del sistema
 system-user-password-sap-entry-name=Nombre de entrada de SAP de contraseña de usuario del sistema
