--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Lisa saadavuse hinnang (Automatic Translation)
 add-billing-address=Lisa arveldusaadress (Automatic Translation)
 add-block=Add Block (Automatic Copy)
 add-blog-entry=Lisa blogi kirje
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Lisa järjehoidja
 add-calendar=Lisa kalender (Automatic Translation)
 add-calendar-booking=Lisa sündmus (Automatic Translation)
@@ -361,6 +362,7 @@ add-document-type=Dokumendi nimi
 add-domain=Domeeni lisamine (Automatic Translation)
 add-draft=Mustandi lisamine (Automatic Translation)
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Elementide lisamine (Automatic Translation)
 add-event=Lisa sündmus
 add-existing-account=Lisa olemasolev konto (Automatic Translation)
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Kas soovite kindlasti 
 are-you-sure-you-want-to-deactivate-the-selected-users=Kas oled kindel, et soovid valitud kasutajad deaktiveerida?
 are-you-sure-you-want-to-deactivate-the-user=Kas soovite kindlasti kasutaja desaktiveerida? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Kas soovite kindlasti selle kasutaja desaktiveerida? (Automatic Translation)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Kas soovite kindlasti rakenduse kustutada? Autoreid ega seotud lubasid pole. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Kas soovite kindlasti rakenduse kustutada? See tegevus tühistab 1 autoriseeringu ja seotud žetoonid. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blogid
 blogs-util=Ajaveebid Util (Automatic Translation)
 blogs-util-help=Pakub utiliidimeetodeid praegustele ajaveebikirjetele juurdepääsuks. (Automatic Translation)
 blogs-with-this-category=Blogs with This Category (Automatic Copy)
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Sisu ja pilt
 body-bg=Keha taust (Automatic Translation)
 body-color=Keha värv (Automatic Translation)
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filter by Item Type (Automatic Copy)
 filter-by-state=Filtreeri oleku järgi (Automatic Translation)
 filter-by-subtype=Filtreeri alamtüübi järgi (Automatic Translation)
 filter-by-type=Filtreeri tüübi järgi (Automatic Translation)
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Kontaktide filtreerimine (Automatic Translation)
 filter-field=Filtriväli (Automatic Translation)
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Rollid
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Rollide valija (Automatic Translation)
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=RSS-i väljaandja (Automatic Translation)
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=SAML-i administraator (Automatic Translation)
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Segmentide eksperiment (Automatic Translation)
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Segmentide simulatsioon (Automatic Translation)
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segmentide (Automatic Translation)
@@ -7730,6 +7737,7 @@ search-documents=Otsi dokumente
 search-engine-helper-configuration-name=Mootori abistaja (Automatic Translation)
 search-engine-optimization=Otsingumootori optimeerimine (Automatic Translation)
 search-engine-vendor=Otsingumootori hankija (Automatic Translation)
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Otsige sarnast artiklit. (Automatic Translation)
 search-for-account=Otsi kontot (Automatic Translation)
 search-for-an-assignee=Määraja otsimine (Automatic Translation)
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Süsteemi vaike-SAP-kirje nimi (Automatic Translat
 system-default-sap-entry-service-signatures=Süsteemi vaike-SAP-i kirje teenuse allkirjad (Automatic Translation)
 system-ldap-configuration-name=ühendus (Automatic Translation)
 system-maximum-number-of-tags-per-asset-description=Saate määrata ühele varale automaatselt lisatavate siltide maksimumarvu. Kui limiiti pole, seadke väärtuseks 0. (Automatic Translation)
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Kirjutamisõigusega roll
 system-user-password-sap-entry-description=Süsteemi kasutaja parooli SAP-kirje kirjeldus (Automatic Translation)
 system-user-password-sap-entry-name=Süsteemi kasutaja parooli SAP-kirje nimi (Automatic Translation)
