--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Add Availability Estimate (Automatic Copy)
 add-billing-address=Add Billing Address (Automatic Copy)
 add-block=Add Block (Automatic Copy)
 add-blog-entry=Gehitu blog sarrera
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Gehitu laster marka
 add-calendar=Gehitu Egutegia
 add-calendar-booking=Gehitu gertakaria
@@ -361,6 +362,7 @@ add-document-type=Dokumentu Mota Gehitu
 add-domain=Add Domain (Automatic Copy)
 add-draft=Add Draft (Automatic Copy)
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Elementuak gehitu
 add-event=Gehitu gertakaria
 add-existing-account=Add Existing Account (Automatic Copy)
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Are you sure you want 
 are-you-sure-you-want-to-deactivate-the-selected-users=Ziur al zaude erabiltzaile hauek desaktibatu nahi dituzula?
 are-you-sure-you-want-to-deactivate-the-user=Are you sure you want to deactivate the user? (Automatic Copy)
 are-you-sure-you-want-to-deactivate-this-user=Ziur al zaude erabiltzaile hau desaktibatu nahi duzula?
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Are you sure you want to delete the application? There are no authorizations or associated tokens. (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Are you sure you want to delete the application? This actions revokes 1 authorization and associated tokens. (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blogak (Kontrol Panela)
 blogs-util=Blogs Util (Automatic Copy)
 blogs-util-help=Provides utility methods to access current blog entries. (Automatic Copy)
 blogs-with-this-category=Blogs with This Category (Automatic Copy)
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Gorputza eta irudia
 body-bg=Body Background (Automatic Copy)
 body-color=Body Color (Automatic Copy)
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filter by Item Type (Automatic Copy)
 filter-by-state=Filter by State (Automatic Copy)
 filter-by-subtype=Filter by Subtype (Automatic Copy)
 filter-by-type=Filter by Type (Automatic Copy)
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Iragazitako Kontaktuak
 filter-field=Filter Field (Automatic Copy)
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Rolak
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Roles Selector (Automatic Copy)
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=RSS Publisher (Automatic Copy)
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=SAML Admin (Automatic Copy)
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Segments Experiment (Automatic Copy)
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Segmentuen simulazioa
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segmentuak
@@ -7730,6 +7737,7 @@ search-documents=Bilatu dokumentuak
 search-engine-helper-configuration-name=Engine Helper (Automatic Copy)
 search-engine-optimization=Bilatzaile Motorrentzako Optimizazioa
 search-engine-vendor=Search Engine Vendor (Automatic Copy)
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Search for a similar article. (Automatic Copy)
 search-for-account=Search for Account (Automatic Copy)
 search-for-an-assignee=Search for an Assignee (Automatic Copy)
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=System Default SAP Entry Name (Automatic Copy)
 system-default-sap-entry-service-signatures=System Default SAP Entry Service Signatures (Automatic Copy)
 system-ldap-configuration-name=Connection (Automatic Copy)
 system-maximum-number-of-tags-per-asset-description=Set the maximum number of tags that will be automatically added to a single asset. Set to 0 if there is no limit. (Automatic Copy)
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Sistemaren rolak
 system-user-password-sap-entry-description=System User Password SAP Entry Description (Automatic Copy)
 system-user-password-sap-entry-name=System User Password SAP Entry Name (Automatic Copy)
