--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Ajouter une estimation de disponibilité
 add-billing-address=Ajouter une adresse de facturation
 add-block=Ajouter un bloc
 add-blog-entry=Ajouter une entrée de blog
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Ajouter un signet
 add-calendar=Ajouter un calendrier
 add-calendar-booking=Ajouter un événement
@@ -361,6 +362,7 @@ add-document-type=Ajouter le type de document
 add-domain=Ajouter un domaine
 add-draft=Ajouter un Brouillon
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Ajouter des éléments
 add-event=Ajouter un événement
 add-existing-account=Ajouter un compte existant
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Voulez-vous vraiment d
 are-you-sure-you-want-to-deactivate-the-selected-users=Êtes-vous sûr de vouloir désactiver les utilisateurs sélectionnés ?
 are-you-sure-you-want-to-deactivate-the-user=Voulez-vous vraiment désactiver l'utilisateur ?
 are-you-sure-you-want-to-deactivate-this-user=Voulez-vous vraiment désactiver cet utilisateur ?
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Voulez-vous vraiment supprimer l'application? Il n'y a aucune autorisation ou jeton associé.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Voulez-vous vraiment supprimer l'application? Cette action révoque 1 autorisation et les jetons associés.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Voulez-vous vraiment supprimer l'application? Cette action révoque {0} autorisations et les jetons associés.
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blogs
 blogs-util=Blogs utile
 blogs-util-help=Fournit des méthodes utilitaires pour accéder aux articles de blogs actuels.
 blogs-with-this-category=Blogs avec cette catégorie
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Corps et image
 body-bg=Fond du corps
 body-color=Couleur du corps
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filtrer par type d'élément
 filter-by-state=Filtrer par statut
 filter-by-subtype=Filtrer par sous-type
 filter-by-type=Filtrer par type
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filtrer la collection
 filter-contacts=Filtrer les contacts
 filter-field=Champ filtre
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Rôles
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Sélectionneur de rôle
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=Éditeur RSS
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=Admin SAML
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Expérience des segments
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Simulation des segments
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segments
@@ -7730,6 +7737,7 @@ search-documents=Rechercher des documents
 search-engine-helper-configuration-name=Aide de moteur
 search-engine-optimization=Optimisation pour les moteurs de recherche
 search-engine-vendor=Fournisseur du moteur de recherche
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Chercher un article similaire.
 search-for-account=Rechercher un compte
 search-for-an-assignee=Rechercher un affecté
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Nom de l'entrée SAP par défaut du système
 system-default-sap-entry-service-signatures=Signatures du service de l'entrée SAP par défaut du système
 system-ldap-configuration-name=Connexion
 system-maximum-number-of-tags-per-asset-description=Définissez le maximum d'étiquettes qui seront automatiquement ajoutés à un même actif. Indiquez 0 si vous ne voulez pas de limite.
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Rôles système
 system-user-password-sap-entry-description=Description de l'entrée SAP du mot de passe de l'utilisateur système
 system-user-password-sap-entry-name=Nom de l'entrée SAP du mot de passe de l'utilisateur système
