--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Aggiungi Stima di Disponibilità
 add-billing-address=Aggiungi Indirizzo di Fatturazione
 add-block=Add Block (Automatic Copy)
 add-blog-entry=Aggiungi Articolo
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Aggiungi Segnalibro
 add-calendar=Aggiungi Calendario
 add-calendar-booking=Aggiungi Evento
@@ -361,6 +362,7 @@ add-document-type=Aggiungi Tipo Documento
 add-domain=Aggiungi un dominio
 add-draft=Aggiungi bozza (Automatic Translation)
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Aggiungi elementi (Automatic Translation)
 add-event=Aggiungi Evento
 add-existing-account=Aggiungi Account Esistente
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Disattivare gli accoun
 are-you-sure-you-want-to-deactivate-the-selected-users=Sei sicuro di voler disattivare gli utenti selezionati?
 are-you-sure-you-want-to-deactivate-the-user=Sicuro di voler disattivare l'utente?
 are-you-sure-you-want-to-deactivate-this-user=Sicuro di voler disattivare l'utente?
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Eliminare l'applicazione? Non ci sono autorizzazioni o token associati. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Eliminare l'applicazione? Questa azione revoca 1 autorizzazione e i token associati. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blog
 blogs-util=Utilità per il Blog
 blogs-util-help=Fornisce metodi di utilità per accedere agli articoli del blog corrente.
 blogs-with-this-category=Blogs with This Category (Automatic Copy)
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Corpo e Immagine
 body-bg=Sfondo corpo (Automatic Translation)
 body-color=Colore corpo (Automatic Translation)
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filter by Item Type (Automatic Copy)
 filter-by-state=Filtra per stato
 filter-by-subtype=Filtra per sottotipo (Automatic Translation)
 filter-by-type=Filtra per Tipo
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filtra Contatti
 filter-field=Campo filtro (Automatic Translation)
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Ruoli
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Selettore ruoli
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=Pubblicazione RSS
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=Amministratore SAML (Automatic Translation)
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Esperimento segmenti (Automatic Translation)
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Simulazione segmenti (Automatic Translation)
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segmenti (Automatic Translation)
@@ -7730,6 +7737,7 @@ search-documents=Ricerca Documenti
 search-engine-helper-configuration-name=Aiutante motore (Automatic Translation)
 search-engine-optimization=Ottimizzazione Motore di Ricerca
 search-engine-vendor=Fornitore motore di ricerca (Automatic Translation)
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Cerca un articolo simile.
 search-for-account=Cerca account (Automatic Translation)
 search-for-an-assignee=Cercare un assegnatario (Automatic Translation)
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Nome voce SAP predefinito del sistema (Automatic T
 system-default-sap-entry-service-signatures=Firme del servizio di immissione SAP predefinite del sistema (Automatic Translation)
 system-ldap-configuration-name=connessione (Automatic Translation)
 system-maximum-number-of-tags-per-asset-description=Impostare il numero massimo di tag che verranno aggiunti automaticamente a una singola risorsa. Impostare su 0 se non è disponibile alcun limite. (Automatic Translation)
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Ruoli di Sistema
 system-user-password-sap-entry-description=Descrizione voce SAP password utente di sistema (Automatic Translation)
 system-user-password-sap-entry-name=Nome voce SAP password utente di sistema (Automatic Translation)
