--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Legg til tilgjengelighetsestimat (Automatic Translatio
 add-billing-address=Legg til faktureringsadresse (Automatic Translation)
 add-block=Add Block (Automatic Copy)
 add-blog-entry=Nytt blogginnlegg
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Legg til bokmerke
 add-calendar=Legg til kalender
 add-calendar-booking=Legg til arrangement
@@ -361,6 +362,7 @@ add-document-type=Legg til dokumenttype
 add-domain=Legg til domene
 add-draft=Legg til kladd (Automatic Translation)
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Legg til elementer
 add-event=Legg til hendelse
 add-existing-account=Legg til eksisterende konto (Automatic Translation)
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Er du sikker på at du
 are-you-sure-you-want-to-deactivate-the-selected-users=Er du sikker på at du vil deaktivere de valgte brukerne?
 are-you-sure-you-want-to-deactivate-the-user=Er du sikker på at du vil deaktivere brukeren? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Er du sikker på at du vil deaktivere denne?
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Er du sikker på at du ønsker å slette applikasjonen? Det finnes ingen autorisasjoner eller relaterte nøkler.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Er du sikker på at du ønsker å slette applikasjonen? Denne handlingen trekker tilbake 1 autorisasjon og relaterte nøkler.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Er du sikker på at du ønsker å slette applikasjonen? Denne handlingen rekker tilbake {0} autorisasjoner og relaterte nøkler.
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blogger
 blogs-util=Bloggverktøy
 blogs-util-help=Tilbyr metoder for tilgang til gjeldende blogginnlegg.
 blogs-with-this-category=Blogs with This Category (Automatic Copy)
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Meldingskropp og bilde
 body-bg=Kroppsbakgrunn (Automatic Translation)
 body-color=Kroppsfarge (Automatic Translation)
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filter by Item Type (Automatic Copy)
 filter-by-state=Filtrer etter stat
 filter-by-subtype=Filtrer etter undertype (Automatic Translation)
 filter-by-type=Filtrer etter type (Automatic Translation)
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filtrér kontakter
 filter-field=Filtrer felt (Automatic Translation)
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Roller
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Velger for roller (Automatic Translation)
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=RSS-utgiver (Automatic Translation)
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=SAML-administrator (Automatic Translation)
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Eksperimenter med segmenter (Automatic Translation)
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Simulering av segmenter (Automatic Translation)
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segmenter
@@ -7730,6 +7737,7 @@ search-documents=Søk dokument
 search-engine-helper-configuration-name=Motor hjelper (Automatic Translation)
 search-engine-optimization=Søkemotoroptimalisering
 search-engine-vendor=Søkemotorleverandør (Automatic Translation)
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Søk etter en lignende artikkel.
 search-for-account=Søk etter konto (Automatic Translation)
 search-for-an-assignee=Søk etter en tilordnet (Automatic Translation)
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Navn på standard SAP-oppføring for system (Autom
 system-default-sap-entry-service-signatures=Standard signaturer for SAP-oppføringstjeneste for system (Automatic Translation)
 system-ldap-configuration-name=forbindelse (Automatic Translation)
 system-maximum-number-of-tags-per-asset-description=Angi maksimalt antall tagger som automatisk legges til i ett enkelt innholdselement. Sett til 0 hvis det ikke er noen grense. (Automatic Translation)
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Systemroller
 system-user-password-sap-entry-description=Beskrivelse av SAP-oppføring for systembrukerpassord (Automatic Translation)
 system-user-password-sap-entry-name=Navn på SAP-oppføring for systembrukerpassord (Automatic Translation)
