--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Adicionar Estimativa de Disponibilidade
 add-billing-address=Adicionar Endereço de Cobrança
 add-block=Adicionar bloqueio
 add-blog-entry=Adicionar Novo Post
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Adicionar bookmark
 add-calendar=Adicionar Calendário
 add-calendar-booking=Adicionar Evento
@@ -361,6 +362,7 @@ add-document-type=Adicionar Tipo de Documento
 add-domain=Adicionar domínio
 add-draft=Adicionar rascunho
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Adicionar elementos
 add-event=Adicionar Evento
 add-existing-account=Adicionar conta existente
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Tem certeza que deseja
 are-you-sure-you-want-to-deactivate-the-selected-users=Você tem certeza que deseja desativar os usuários selecionados?
 are-you-sure-you-want-to-deactivate-the-user=Tens a certeza de que você deseja desativar o usuário?
 are-you-sure-you-want-to-deactivate-this-user=Tem certeza que deseja desativar este usuário?
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Tem certeza que deseja excluir o aplicativo? Não existem autorizações ou tokens associados.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Tem certeza que deseja excluir o aplicativo? Esta ação revoga 1 autorização e tokens associados.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Tem certeza que deseja excluir o aplicativo? Esta ação revoga {0} autorizações e tokens associados.
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blogs
 blogs-util=Utilitário de blogs
 blogs-util-help=Fornece métodos utilitários para acessar as entradas de blog atual.
 blogs-with-this-category=Blogs com esta categoria
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Corpo e imagem
 body-bg=Fundo do corpo
 body-color=Cor do corpo
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filtrar por tipo de item
 filter-by-state=Filtrar por Estado
 filter-by-subtype=Filtrar por subtipo
 filter-by-type=Filtrar por tipo
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filtrar Coleção
 filter-contacts=Filtrar contatos
 filter-field=Campo de filtro
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Papéi
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Selecionar de função
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=Publicador RSS
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=Administrador SAML
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Experimento de segmentos
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Simulação de segmentos
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segmentos
@@ -7730,6 +7737,7 @@ search-documents=Pesquisar documentos
 search-engine-helper-configuration-name=Assistente do Mecanismo
 search-engine-optimization=Otimização da engine de busca
 search-engine-vendor=Fornecedor de motor de busca
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Buscar por um artigo semelhante.
 search-for-account=Buscar por conta
 search-for-an-assignee=Buscar por um Responsável
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Nome da entrada SAP padrão do sistema
 system-default-sap-entry-service-signatures=Assinatura de serviço de entrada SAP padrão do sistema
 system-ldap-configuration-name=Conexão
 system-maximum-number-of-tags-per-asset-description=Definir o número máximo de marcadores que serão adicionados automaticamente a um único conteúdo. Definir para 0 se não houver limite.
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Papéis do Sistema
 system-user-password-sap-entry-description=Descrição de entrada SAP de senha do usuário do sistema
 system-user-password-sap-entry-name=Nome da entrada SAP da senha do usuário do sistema
