--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Pridať odhad dostupnosti (Automatic Translation)
 add-billing-address=Pridanie fakturačnej adresy (Automatic Translation)
 add-block=Add Block (Automatic Copy)
 add-blog-entry=Pridať príspevok na blog
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Pridať záložku
 add-calendar=Pridať kalendár
 add-calendar-booking=Pridať udalosť
@@ -361,6 +362,7 @@ add-document-type=Pridať typ dokumentu
 add-domain=Pridať doménu (Automatic Translation)
 add-draft=Pridať koncept (Automatic Translation)
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Pridať prvky (Automatic Translation)
 add-event=Pridať udalosť
 add-existing-account=Pridať existujúce konto (Automatic Translation)
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Naozaj chcete deaktivo
 are-you-sure-you-want-to-deactivate-the-selected-users=Ste si istý, že chcete deaktivovať vybraných používateľov?
 are-you-sure-you-want-to-deactivate-the-user=Naozaj chcete deaktivovať používateľa? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Naozaj chcete deaktivovať tohto používateľa? (Automatic Translation)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Naozaj chcete odstrániť aplikáciu? Neexistujú žiadne oprávnenia ani priradené tokeny. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Naozaj chcete odstrániť aplikáciu? Táto akcia zruší 1 autorizáciu a priradené tokeny. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blogy
 blogs-util=Blogy Util (Automatic Translation)
 blogs-util-help=Poskytuje metódy pomôcok na prístup k aktuálnym záznamom blogu. (Automatic Translation)
 blogs-with-this-category=Blogs with This Category (Automatic Copy)
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Telo a obrázok
 body-bg=Pozadie tela (Automatic Translation)
 body-color=Farba tela (Automatic Translation)
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filter by Item Type (Automatic Copy)
 filter-by-state=Filtrovanie podľa štátu (Automatic Translation)
 filter-by-subtype=Filtrovať podľa podtypu (Automatic Translation)
 filter-by-type=Filtrovanie podľa typu (Automatic Translation)
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filtrovať kontakty
 filter-field=Pole filtra (Automatic Translation)
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Role
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Selektor rolí (Automatic Translation)
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=Vydavateľ RSS (Automatic Translation)
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=Správca SAML (Automatic Translation)
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Experiment segmentov (Automatic Translation)
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Simulácia segmentov (Automatic Translation)
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segmenty (Automatic Translation)
@@ -7730,6 +7737,7 @@ search-documents=Vyhľadávať v dokumentoch
 search-engine-helper-configuration-name=Pomocník pre motory (Automatic Translation)
 search-engine-optimization=Optimalizácia pre vyhľadávače
 search-engine-vendor=Dodávateľ vyhľadávača (Automatic Translation)
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Hľadať podobné články.
 search-for-account=Vyhľadať účet (Automatic Translation)
 search-for-an-assignee=Vyhľadanie nadobúdateľa (Automatic Translation)
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Predvolený názov položky SYSTÉMU SAP (Automati
 system-default-sap-entry-service-signatures=Predvolené podpisy vstupnej služby SAP (Automatic Translation)
 system-ldap-configuration-name=pripojenie (Automatic Translation)
 system-maximum-number-of-tags-per-asset-description=Nastavte maximálny počet značiek, ktoré sa automaticky pridajú do jedného majetku. Ak neexistuje žiadny limit, nastavte na 0. (Automatic Translation)
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Systémové role
 system-user-password-sap-entry-description=Popis položky SAP heslo používateľa systému (Automatic Translation)
 system-user-password-sap-entry-name=Vstupné meno SAP heslo používateľa systému (Automatic Translation)
