--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Přidat odhad dostupnosti (Automatic Translation)
 add-billing-address=Přidat fakturační adresu (Automatic Translation)
 add-block=Add Block (Automatic Copy)
 add-blog-entry=Přidat příspěvek do blogu
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Přidat záložku
 add-calendar=Přidat kalendář
 add-calendar-booking=Přidat akci
@@ -361,6 +362,7 @@ add-document-type=Přidat typ dokumentu
 add-domain=Přidat doménu (Automatic Translation)
 add-draft=Přidat koncept (Automatic Translation)
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Přidat prvky (Automatic Translation)
 add-event=Přidat událost
 add-existing-account=Přidat existující účet (Automatic Translation)
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Opravdu chcete deaktiv
 are-you-sure-you-want-to-deactivate-the-selected-users=Opravdu chcete deaktivovat označené uživatele?
 are-you-sure-you-want-to-deactivate-the-user=Opravdu chcete uživatele deaktivovat? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Opravdu chcete tohoto uživatele deaktivovat? (Automatic Translation)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Opravdu chcete aplikaci odstranit? Neexistují žádné autorizace ani přidružené tokeny. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Opravdu chcete aplikaci odstranit? Tyto akce zruší autorizaci 1 a přidružené tokeny. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blogy
 blogs-util=Blogy Util (Automatic Translation)
 blogs-util-help=Poskytuje metody nástrojů pro přístup k aktuálním položkám blogu. (Automatic Translation)
 blogs-with-this-category=Blogs with This Category (Automatic Copy)
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Text zprávy a obrázek
 body-bg=Pozadí těla (Automatic Translation)
 body-color=Barva těla (Automatic Translation)
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filter by Item Type (Automatic Copy)
 filter-by-state=Filtrovat podle stavu (Automatic Translation)
 filter-by-subtype=Filtrovat podle podtypu (Automatic Translation)
 filter-by-type=Filtrovat podle typu (Automatic Translation)
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filtrovat kontakty
 filter-field=Pole filtru (Automatic Translation)
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Role
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Volič rolí (Automatic Translation)
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=Vydavatel RSS (Automatic Translation)
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=Správce SAML (Automatic Translation)
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Experiment segmentů (Automatic Translation)
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Simulace segmentů (Automatic Translation)
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=segmenty (Automatic Translation)
@@ -7730,6 +7737,7 @@ search-documents=Hledat dokument
 search-engine-helper-configuration-name=Pomocník motoru (Automatic Translation)
 search-engine-optimization=Optimalizace pro vyhledávače
 search-engine-vendor=Dodavatel vyhledávače (Automatic Translation)
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Vyhledejte podobný článek. (Automatic Translation)
 search-for-account=Hledání účtu (Automatic Translation)
 search-for-an-assignee=Hledání postupníka (Automatic Translation)
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Výchozí název položky SAP systému (Automatic 
 system-default-sap-entry-service-signatures=Výchozí podpisy služby SAP entry service systému (Automatic Translation)
 system-ldap-configuration-name=připojení (Automatic Translation)
 system-maximum-number-of-tags-per-asset-description=Nastavte maximální počet značek, které budou automaticky přidány do jednoho majetku. Pokud není k dispozici žádný limit, nastavte hodnotu 0. (Automatic Translation)
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Role webu
 system-user-password-sap-entry-description=Popis položky SAP systémového uživatelského hesla (Automatic Translation)
 system-user-password-sap-entry-name=Název položky SAP systémového uživatelského hesla (Automatic Translation)
