--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -326,6 +326,7 @@ add-availability-estimate=افزودن برآورد موجودی
 add-billing-address=افزودن آدرس صورتحساب (Automatic Translation)
 add-block=Add Block (Automatic Copy)
 add-blog-entry=اضافه کردن پست وبلاگ
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=مشاهده علامت ها
 add-calendar=افزودن تقویم
 add-calendar-booking=افزودن رویداد
@@ -361,6 +362,7 @@ add-document-type=افزودن نوع سند
 add-domain=افزودن دامنه (Automatic Translation)
 add-draft=اضافه کردن پیش نویس (Automatic Translation)
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=افزودن عناصر
 add-event=افزودن رویداد
 add-existing-account=افزودن حساب موجود (Automatic Translation)
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=آیا مطمئن هس
 are-you-sure-you-want-to-deactivate-the-selected-users=آيا مطمئن هستيد که می خواهيد اين کاربران را غير فعال کنيد؟
 are-you-sure-you-want-to-deactivate-the-user=آیا مطمئن هستید که می خواهید کاربر را غیر فعال کنید؟ (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=آیا مطمئن هستید که می خواهید این کاربر را غیر فعال کنید؟ (Automatic Translation)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=آیا مطمئن هستید که می خواهید برنامه را حذف کنید؟ هیچ مجوز یا نشانه مرتبطی وجود ندارد. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=آیا مطمئن هستید که می خواهید برنامه را حذف کنید؟ این اقدامات مجوز ۱ و نشانه های مرتبط را لغو می کند. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=وبلاگ‌ها
 blogs-util=ابزار وبلاگ
 blogs-util-help=روش های ابزار برای دسترسی به ورودی های فعلی وبلاگ فراهم می کند.
 blogs-with-this-category=Blogs with This Category (Automatic Copy)
+blueprints=Blueprints (Automatic Copy)
 body-and-image=محتوا و تصویر
 body-bg=پیشینه بدن (Automatic Translation)
 body-color=رنگ بدن (Automatic Translation)
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filter by Item Type (Automatic Copy)
 filter-by-state=فیلتر بر اساس وضعیت
 filter-by-subtype=فیلتر بر اساس زیرگروه (Automatic Translation)
 filter-by-type=فیلتر بر اساس نوع (Automatic Translation)
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=فیلتر مخاطبان
 filter-field=فیلد فیلتر
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=نقش
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=انتخاب کننده نقش
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=ناشر RSS
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=مدیر SAML (Automatic Translation)
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=آزمایش بخش ها (Automatic Translation)
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=شبیه سازی بخش ها
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=بخش ها
@@ -7730,6 +7737,7 @@ search-documents=جستجوی اسناد
 search-engine-helper-configuration-name=موتور راهنما
 search-engine-optimization=بهینه‌سازی موتورهای جست‌و‌جو
 search-engine-vendor=فروشنده موتور جستجو (Automatic Translation)
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=جستجو برای یک مقاله مشابه
 search-for-account=جستجو برای حساب (Automatic Translation)
 search-for-an-assignee=جستجو برای یک محول (Automatic Translation)
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=سیستم پیش فرض SAP نام ورود (Auto
 system-default-sap-entry-service-signatures=سیستم پیش فرض SAP ورود امضا خدمات (Automatic Translation)
 system-ldap-configuration-name=اتصال
 system-maximum-number-of-tags-per-asset-description=حداکثر تعداد برچسب هایی که به صورت خودکار به یک مطلب اضافه می شوند را مشخص نمایید. 0 را انتخاب نمایید اگر هیچ محدودیتی وجود ندارد.
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=نقش سیستمی
 system-user-password-sap-entry-description=سیستم کاربر رمز عبور SAP توضیحات ورود (Automatic Translation)
 system-user-password-sap-entry-name=سیستم کاربر رمز عبور SAP نام ورود (Automatic Translation)
