--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Lisää Saatavuusarvio
 add-billing-address=Lisää Laskutusosoite
 add-block=Lisää lohko
 add-blog-entry=Lisää blogimerkintä
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Lisää kirjanmerkki
 add-calendar=Lisää kalenteriin
 add-calendar-booking=Lisää tapahtuma
@@ -361,6 +362,7 @@ add-document-type=Lisää asiakirjatyyppi
 add-domain=Lisää Toimialue
 add-draft=Lisää Luonnos
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Lisää Elementit
 add-event=Lisää tapahtuma
 add-existing-account=Lisää Olemassa Oleva Tili
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Oletko varma, että ha
 are-you-sure-you-want-to-deactivate-the-selected-users=Oletko varma, että haluat deaktivoida valitut käyttäjät?
 are-you-sure-you-want-to-deactivate-the-user=Haluatko varmasti poistaa tämän käyttäjän aktivoinnin?
 are-you-sure-you-want-to-deactivate-this-user=Haluatko varmasti poistaa tämän käyttäjän aktivoinnin?
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Oletko varma, että haluat poistaa sovelluksen? Ei ole valtuutuksia tai niihin liittyviä tokeneita.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Oletko varma, että haluat poistaa sovelluksen? Tämä toimia peruuttaa 1 valtuutuksen ja niihin liittyvät tokenit.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Oletko varma, että haluat poistaa sovelluksen? Tämä toiminta peruuttaa {0} valtuutusta ja niihin liittyvät tokenit.
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blogit
 blogs-util=Blogien Apuväline
 blogs-util-help=Tarjoaa apumenetelmiä nykyisten blogimerkintöjen käyttämiseen.
 blogs-with-this-category=Tämän luokan blogit
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Sisältö ja kuva
 body-bg=Rungon Taustaväri
 body-color=Rungon Väri
@@ -3674,6 +3679,7 @@ filter-by-item-type=Suodata kohteen tyypin mukaan
 filter-by-state=Suodata tilan perusteella
 filter-by-subtype=Suodata Alatyypin Perusteella
 filter-by-type=Suodata Tyypin perusteella
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Suodatuskokoelma
 filter-contacts=Suodata yhteystietoja
 filter-field=Suodatinkenttä
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Roolit
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Roolien Valitsin
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=RSS-julkaisu
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=SAML Hallinta
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Segmenttien Koe
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Segmenttien Simulointi
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segmentit
@@ -7730,6 +7737,7 @@ search-documents=Etsi dokumentteja
 search-engine-helper-configuration-name=Moottoriavustaja
 search-engine-optimization=Hakukone optimointi
 search-engine-vendor=Hakumoottorin Toimittaja
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Hae samanlaista artikkelia.
 search-for-account=Etsi Tiliä
 search-for-an-assignee=Etsi Vastuuhenkilöä
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Järjestelmän Oletus-SAP-merkinnän Nimi
 system-default-sap-entry-service-signatures=Järjestelmän Oletus-SAP-merkinnän Palveluallekirjoitukset
 system-ldap-configuration-name=Yhteys
 system-maximum-number-of-tags-per-asset-description=Aseta suurin määrä tageja, jotka lisätään automaattisesti yhteen sisältöön. Aseta 0, jos rajaa ei ole.
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Järjestelmäroolit
 system-user-password-sap-entry-description=Järjestelmän Käyttäjän Salasanan SAP-merkinnän Kuvaus
 system-user-password-sap-entry-name=Järjestelmän Käyttäjän Salasanan SAP-merkinnän Nimi
