--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Add Availability Estimate (Automatic Copy)
 add-billing-address=Add Billing Address (Automatic Copy)
 add-block=Add Block (Automatic Copy)
 add-blog-entry=Engadir entrada no blog
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Engadir enlace
 add-calendar=Engadir calendario
 add-calendar-booking=Engadir evento
@@ -361,6 +362,7 @@ add-document-type=Engadir tipo de documento
 add-domain=Engadir dominio
 add-draft=Engadir borrador
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Engadir elementos
 add-event=Engadir evento
 add-existing-account=Add Existing Account (Automatic Copy)
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Are you sure you want 
 are-you-sure-you-want-to-deactivate-the-selected-users=¿Estás seguro de que queres desactivar aos usuarios seleccionados?
 are-you-sure-you-want-to-deactivate-the-user=Are you sure you want to deactivate the user? (Automatic Copy)
 are-you-sure-you-want-to-deactivate-this-user=Ten certeza de que desexa desactivar este usuario?
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Are you sure you want to delete the application? There are no authorizations or associated tokens. (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Are you sure you want to delete the application? This actions revokes 1 authorization and associated tokens. (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blogs
 blogs-util=Utilidade de blogs
 blogs-util-help=Provides utility methods to access current blog entries. (Automatic Copy)
 blogs-with-this-category=Blogs with This Category (Automatic Copy)
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Corpo e imaxe
 body-bg=Body Background (Automatic Copy)
 body-color=Cor do corpo
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filter by Item Type (Automatic Copy)
 filter-by-state=Filtrar por estado
 filter-by-subtype=Filter by Subtype (Automatic Copy)
 filter-by-type=Filtrar por tipo
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filtrar contactos
 filter-field=Campo de filtro
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Rol
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Roles Selector (Automatic Copy)
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=Publicador RSS
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=Administrador SAML
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Segments Experiment (Automatic Copy)
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Segments Simulation (Automatic Copy)
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segmentos
@@ -7730,6 +7737,7 @@ search-documents=Buscar documentos
 search-engine-helper-configuration-name=Asistente do motor
 search-engine-optimization=Optimización do motor de busquedas
 search-engine-vendor=Search Engine Vendor (Automatic Copy)
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Search for a similar article. (Automatic Copy)
 search-for-account=Search for Account (Automatic Copy)
 search-for-an-assignee=Search for an Assignee (Automatic Copy)
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=System Default SAP Entry Name (Automatic Copy)
 system-default-sap-entry-service-signatures=System Default SAP Entry Service Signatures (Automatic Copy)
 system-ldap-configuration-name=Conexión
 system-maximum-number-of-tags-per-asset-description=Set the maximum number of tags that will be automatically added to a single asset. Set to 0 if there is no limit. (Automatic Copy)
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Gardar roles
 system-user-password-sap-entry-description=System User Password SAP Entry Description (Automatic Copy)
 system-user-password-sap-entry-name=System User Password SAP Entry Name (Automatic Copy)
