--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Elérhetőség-becslés hozzáadása
 add-billing-address=Számlázási cím hozzáadása
 add-block=Blokk hozzáadása
 add-blog-entry=Új blog bejegyzés
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Új könyvjelző
 add-calendar=Új naptár
 add-calendar-booking=Új esemény
@@ -361,6 +362,7 @@ add-document-type=Dokumentumtípus hozzáadása
 add-domain=Tartomány hozzáadása
 add-draft=Vázlat hozzáadása
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Elemek hozzáadása
 add-event=Új esemény
 add-existing-account=Meglévő fiók hozzáadása
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Biztosan deaktiválni 
 are-you-sure-you-want-to-deactivate-the-selected-users=Biztosan deaktiváljuk a kiválasztott felhasználókat?
 are-you-sure-you-want-to-deactivate-the-user=Biztosan deaktiválni kívánja a felhasználót?
 are-you-sure-you-want-to-deactivate-this-user=Biztosan deaktiválni kívánja ezt a felhasználót?
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Biztosan törölni kívánja az alkalmazást? Nincsenek hitelesítések, sem hozzárendelt tokenek.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Biztosan törölni kívánja az alkalmazást? Ez a művelet megvon 1 hitelesítést és a hozzárendelt tokeneket.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Biztosan törölni kívánja az alkalmazást? Ez a művelet megvon {0} hitelesítést és a hozzárendelt tokeneket.
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blogok
 blogs-util=Blog Util
 blogs-util-help=Segédmódszereket kínál az aktuális blog elemek eléréséhez.
 blogs-with-this-category=Ilyen kategóriájú blogok
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Törzs és kép
 body-bg=Törzs háttere
 body-color=Törzs színe
@@ -3674,6 +3679,7 @@ filter-by-item-type=Szűrés elemtípus szerint
 filter-by-state=Szűrés állam szerint
 filter-by-subtype=Szűrés altípus szerint
 filter-by-type=Szűrés típus szerint
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Gyűjtemény szűrése
 filter-contacts=Kapcsolatok szűrése
 filter-field=Szűrőmező
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Szerep
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Szerepkör-választó
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=RSS kiadó
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=SAML adminisztrátor
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Szegmenskísérlet
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Szegmensek szimulációja
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Szegmensek
@@ -7730,6 +7737,7 @@ search-documents=Dokumentumok keresése
 search-engine-helper-configuration-name=Motor súgója
 search-engine-optimization=Keresőmotor-optimalizálás
 search-engine-vendor=Keresőmotor forgalmazója
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Hasonló cikk keresése.
 search-for-account=Fiók keresése
 search-for-an-assignee=Megbízott keresése
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=A rendszer alapértelmezett SAP bejegyzésének ne
 system-default-sap-entry-service-signatures=A rendszer alapértelmezett SAP bejegyzésének szolgáltatás-aláírásai
 system-ldap-configuration-name=Kapcsolódás
 system-maximum-number-of-tags-per-asset-description=Állítsa be az egy tartalomhoz automatikusan hozzáadható címkék maximális számát. Ha nem kívánja korlátozni, állítson be 0 értéket.
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Rendszer szerepkörök
 system-user-password-sap-entry-description=A rendszer felhasználói jelszava SAP bejegyzésének leírása
 system-user-password-sap-entry-name=A rendszer felhasználói jelszava SAP bejegyzésének neve
