--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Estimasi Tambah Ketersediaan (Automatic Translation)
 add-billing-address=Tambahkan Alamat Penagihan (Automatic Translation)
 add-block=Add Block (Automatic Copy)
 add-blog-entry=Tambah Blog Entry
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Tambah Bookmark
 add-calendar=Tambah Kalender
 add-calendar-booking=Tambahkan Acara (Automatic Translation)
@@ -361,6 +362,7 @@ add-document-type=Tambahkan Jenis Dokumen
 add-domain=Tambah Domain (Automatic Translation)
 add-draft=Tambahkan Draf (Automatic Translation)
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Tambah Elemen (Automatic Translation)
 add-event=Menambah Event
 add-existing-account=Tambahkan Akun yang Ada (Automatic Translation)
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Yakin ingin menonaktif
 are-you-sure-you-want-to-deactivate-the-selected-users=Apakah Anda yakin ingin menonaktifkan pengguna terpilih?
 are-you-sure-you-want-to-deactivate-the-user=Yakin ingin menonaktifkan pengguna? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Yakin ingin menonaktifkan pengguna ini? (Automatic Translation)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Yakin ingin menghapus aplikasi ini? Tidak ada otorisasi atau token terkait. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Yakin ingin menghapus aplikasi ini? Tindakan ini mencabut 1 otorisasi dan token terkait. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blog (Control Panel)
 blogs-util=Blog Util (Automatic Translation)
 blogs-util-help=Menyediakan metode utilitas untuk mengakses entri blog saat ini. (Automatic Translation)
 blogs-with-this-category=Blogs with This Category (Automatic Copy)
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Tubuh dan Gambar
 body-bg=Latar Belakang Tubuh (Automatic Translation)
 body-color=Warna Tubuh (Automatic Translation)
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filter by Item Type (Automatic Copy)
 filter-by-state=Filter menurut Status (Automatic Translation)
 filter-by-subtype=Filter menurut subtipe (Automatic Translation)
 filter-by-type=Filter menurut Tipe (Automatic Translation)
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filter Kontak
 filter-field=Bidang Filter (Automatic Translation)
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Peran
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Pemilih Peran (Automatic Translation)
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=Penerbit RSS (Automatic Translation)
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=SAML Admin (Automatic Translation)
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Eksperimen Segmen (Automatic Translation)
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Simulasi Segmen (Automatic Translation)
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segmen (Automatic Translation)
@@ -7730,6 +7737,7 @@ search-documents=Cari Dokumen
 search-engine-helper-configuration-name=Pembantu Mesin (Automatic Translation)
 search-engine-optimization=Mencari Mesin Optimasi
 search-engine-vendor=Vendor Mesin Pencari (Automatic Translation)
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Mencari artikel serupa. (Automatic Translation)
 search-for-account=Cari Akun (Automatic Translation)
 search-for-an-assignee=Mencari Penerima Tugas (Automatic Translation)
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Nama Entri SAP Asali Sistem (Automatic Translation
 system-default-sap-entry-service-signatures=Tanda Tangan Layanan Entri SAP Default Sistem (Automatic Translation)
 system-ldap-configuration-name=sambungan (Automatic Translation)
 system-maximum-number-of-tags-per-asset-description=Atur jumlah maksimum tag yang akan ditambahkan secara otomatis ke satu aset. Atur ke 0 jika tidak ada batasan. (Automatic Translation)
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Menulis Peran
 system-user-password-sap-entry-description=Deskripsi Entri SAP Kata Sandi Pengguna Sistem (Automatic Translation)
 system-user-password-sap-entry-name=Nama Entri SAP Kata Sandi Pengguna Sistem (Automatic Translation)
