--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Įtraukti pasiekiamumo įvertinimą (Automatic Transla
 add-billing-address=Įtraukti atsiskaitymo adresą (Automatic Translation)
 add-block=Add Block (Automatic Copy)
 add-blog-entry=Įtraukti internetinio dienoraščio įrašą (Automatic Translation)
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Pridėti žymelę (Automatic Translation)
 add-calendar=Įtraukti kalendorių (Automatic Translation)
 add-calendar-booking=Įtraukti įvykį (Automatic Translation)
@@ -361,6 +362,7 @@ add-document-type=Pridėti dokumento tipą (Automatic Translation)
 add-domain=Įtraukti domeną (Automatic Translation)
 add-draft=Pridėti juodraštį (Automatic Translation)
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Elementų įtraukimas (Automatic Translation)
 add-event=Įtraukti įvykį (Automatic Translation)
 add-existing-account=Įtraukti esamą abonementą (Automatic Translation)
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Ar tikrai norite išju
 are-you-sure-you-want-to-deactivate-the-selected-users=Ar tikrai norite išjungti pasirinktus vartotojus? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-the-user=Ar tikrai norite išjungti vartotoją? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Ar tikrai norite išjungti šį vartotoją? (Automatic Translation)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Ar tikrai norite panaikinti taikomąją programą? Nėra leidimų ar susietų atpažinimo ženklų. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Ar tikrai norite panaikinti taikomąją programą? Šie veiksmai panaikina 1 autorizavimo ir susijusių atpažinimo ženklų. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blogai
 blogs-util=Dienoraščiai Util (Automatic Translation)
 blogs-util-help=Teikia naudingumo metodus, kad būtų galima pasiekti dabartinius internetinio dienoraščio įrašus. (Automatic Translation)
 blogs-with-this-category=Blogs with This Category (Automatic Copy)
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Kūnas ir vaizdas (Automatic Translation)
 body-bg=Kūno fonas (Automatic Translation)
 body-color=Kūno spalva (Automatic Translation)
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filter by Item Type (Automatic Copy)
 filter-by-state=Filtruoti pagal valstiją (Automatic Translation)
 filter-by-subtype=Filtruoti pagal potipį (Automatic Translation)
 filter-by-type=Filtruoti pagal tipą (Automatic Translation)
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filtruoti kontaktus (Automatic Translation)
 filter-field=Filtro laukas (Automatic Translation)
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Vaidme
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Vaidmenų parinkiklis (Automatic Translation)
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=RSS leidėjas (Automatic Translation)
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=SAML administratorius (Automatic Translation)
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Segmentų eksperimentas (Automatic Translation)
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Segmentų modeliavimas (Automatic Translation)
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segmentų (Automatic Translation)
@@ -7730,6 +7737,7 @@ search-documents=Ieškoti dokumentuose (Automatic Translation)
 search-engine-helper-configuration-name=Variklio pagalbininkas (Automatic Translation)
 search-engine-optimization=Optimizavimas paieškos sistemoms (Automatic Translation)
 search-engine-vendor=Ieškos modulio tiekėjas (Automatic Translation)
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Ieškokite panašaus straipsnio. (Automatic Translation)
 search-for-account=Ieškoti paskyros (Automatic Translation)
 search-for-an-assignee=Ieškoti perėmės (Automatic Translation)
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Sistemos numatytasis SAP įrašo pavadinimas (Auto
 system-default-sap-entry-service-signatures=Sistemos numatytieji SAP įrašų tarnybos parašai (Automatic Translation)
 system-ldap-configuration-name=ryšys (Automatic Translation)
 system-maximum-number-of-tags-per-asset-description=Nustatykite maksimalų žymių, kurios bus automatiškai įtrauktos į vieną turtą, skaičių. Jei nėra limito, nustatykite 0. (Automatic Translation)
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Sistemos vaidmenys (Automatic Translation)
 system-user-password-sap-entry-description=Sistemos vartotojo slaptažodžio SAP įrašo aprašas (Automatic Translation)
 system-user-password-sap-entry-name=Sistemos vartotojo slaptažodis SAP įrašo pavadinimas (Automatic Translation)
