--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Tambah Anggaran Ketersediaan (Automatic Translation)
 add-billing-address=Tambah Alamat Pengebilan (Automatic Translation)
 add-block=Add Block (Automatic Copy)
 add-blog-entry=Tambah Entri Blog (Automatic Translation)
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Tambah Penanda Buku (Automatic Translation)
 add-calendar=Tambah Kalendar (Automatic Translation)
 add-calendar-booking=Tambah Peristiwa (Automatic Translation)
@@ -361,6 +362,7 @@ add-document-type=Tambah Jenis Dokumen (Automatic Translation)
 add-domain=Tambah Domain (Automatic Translation)
 add-draft=Tambah Draf (Automatic Translation)
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Tambah Elemen (Automatic Translation)
 add-event=Tambah Peristiwa (Automatic Translation)
 add-existing-account=Tambah Akaun Sedia Ada (Automatic Translation)
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Adakah awda pasti hend
 are-you-sure-you-want-to-deactivate-the-selected-users=Adakah awda pasti hendak menyahaktifkan pengguna terpilih? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-the-user=Adakah awda pasti hendak menyahaktifkan pengguna? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Adakah awda pasti hendak menyahaktifkan pengguna ini? (Automatic Translation)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Adakah awda pasti hendak menghapuskan aplikasi itu? Tiada kebenaran atau token yang berkaitan. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Adakah awda pasti hendak menghapuskan aplikasi itu? Tindakan ini membatalkan 1 kebenaran dan token yang berkaitan. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blog (Automatic Translation)
 blogs-util=Blogs Utiliti (Automatic Translation)
 blogs-util-help=Menyediakan kaedah utiliti untuk mengakses penyertaan blog semasa. (Automatic Translation)
 blogs-with-this-category=Blogs with This Category (Automatic Copy)
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Badan dan Imej (Automatic Translation)
 body-bg=Latar Belakang Badan (Automatic Translation)
 body-color=Warna Badan (Automatic Translation)
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filter by Item Type (Automatic Copy)
 filter-by-state=Tapis mengikut Negeri (Automatic Translation)
 filter-by-subtype=Tapis mengikut Subtype (Automatic Translation)
 filter-by-type=Tapis mengikut Jenis (Automatic Translation)
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Tapis Kenalan (Automatic Translation)
 filter-field=Medan Penapis (Automatic Translation)
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Perana
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Pemilih Peranan (Automatic Translation)
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=Penerbit RSS (Automatic Translation)
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=Pentadbir SAML (Automatic Translation)
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Eksperimen Segmen (Automatic Translation)
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Simulasi Segmen (Automatic Translation)
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segmen (Automatic Translation)
@@ -7730,6 +7737,7 @@ search-documents=Gelintar Dokumen (Automatic Translation)
 search-engine-helper-configuration-name=Enjin Helper (Automatic Translation)
 search-engine-optimization=Pengoptimuman Enjin Carian (Automatic Translation)
 search-engine-vendor=Carian Enjin Vendor (Automatic Translation)
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Cari artikel yang sama. (Automatic Translation)
 search-for-account=Cari Akaun (Automatic Translation)
 search-for-an-assignee=Gelintar untuk Tugasan (Automatic Translation)
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Nama Kemasukan SAP Lalai Sistem (Automatic Transla
 system-default-sap-entry-service-signatures=Tandatangan Perkhidmatan Masuk SAP Lalai Sistem (Automatic Translation)
 system-ldap-configuration-name=Sambungan (Automatic Translation)
 system-maximum-number-of-tags-per-asset-description=Tetapkan bilangan maksimum tag yang akan ditambah secara automatik ke aset tunggal. Tetapkan kepada 0 jika tiada had. (Automatic Translation)
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Peranan Sistem (Automatic Translation)
 system-user-password-sap-entry-description=Perihalan Kemasukan SAP Kata Laluan Pengguna Sistem (Automatic Translation)
 system-user-password-sap-entry-name=Nama Masuk SAP Kata Laluan Pengguna Sistem (Automatic Translation)
