--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Beschikbaarheidsraming toevoegen
 add-billing-address=Factuuradres toevoegen
 add-block=Blok toevoegen
 add-blog-entry=Blog toevoegen
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Bladwijzer toevoegen
 add-calendar=Kalender toevoegen
 add-calendar-booking=Gebeurtenis toevoegen
@@ -361,6 +362,7 @@ add-document-type=Documenttype toevoegen
 add-domain=Domein toevoegen
 add-draft=Concept toevoegen
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Elementen toevoegen
 add-event=Gebeurtenis toevoegen
 add-existing-account=Bestaand account toevoegen
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Weet u zeker dat u de 
 are-you-sure-you-want-to-deactivate-the-selected-users=Weet u zeker dat u de geselecteerde gebruikers wilt deactiveren?
 are-you-sure-you-want-to-deactivate-the-user=Weet u zeker dat u deze gebruiker wilt deactiveren?
 are-you-sure-you-want-to-deactivate-this-user=Weet u zeker dat u deze gebruiker wilt deactiveren?
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Weet u zeker dat u de applicatie wilt verwijderen? Er zijn geen autorisaties of bijbehorende tokens.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Weet u zeker dat u de applicatie wilt verwijderen? Deze actie trekt 1 autorisatie en bijbehorende tokens in.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Weet u zeker dat u de applicatie wilt verwijderen? Deze actie trekt {0} autorisaties en bijbehorende tokens in.
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blogs
 blogs-util=Blogs Util
 blogs-util-help=Biedt hulpmethoden voor toegang tot huidige blog berichten.
 blogs-with-this-category=Blogs met deze categorie
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Hoofdtekst en afbeelding
 body-bg=Achtergrondkleur tekst
 body-color=Kleur tekst
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filteren op itemtype
 filter-by-state=Filter op status
 filter-by-subtype=Filteren op subtype
 filter-by-type=Filteren op type
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filtercollectie
 filter-contacts=Contactpersonen filteren
 filter-field=Filterveld
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Rollen
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Rolkiezer
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=RSS-uitgever
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=SAML-beheerder
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Segmentenexperiment
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Segmentsimulatie
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segmenten
@@ -7730,6 +7737,7 @@ search-documents=Documenten zoeken
 search-engine-helper-configuration-name=Helper zoekmachine
 search-engine-optimization=SEO - Zoekmachine optimalisatie
 search-engine-vendor=Verkoper zoekmachine
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Zoek naar een soortgelijk artikel.
 search-for-account=Account zoeken
 search-for-an-assignee=Een gevolmachtigde zoeken
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Standaard naam SAP-invoer systeem
 system-default-sap-entry-service-signatures=Standaard servicehandtekeningen SAP-invoer systeem
 system-ldap-configuration-name=Verbinding
 system-maximum-number-of-tags-per-asset-description=Stel het maximum aantal labels in dat automatisch aan één enkele asset wordt toegevoegd. Stel in op 0 als er geen limiet is.
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Systeemrollen
 system-user-password-sap-entry-description=Beschrijving gebruikerswachtwoord SAP-invoer systeem
 system-user-password-sap-entry-name=Naam gebruikerswachtwoord SAP-invoer systeem
