--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Dodaj oszacowanie dostępności (Automatic Translation
 add-billing-address=Dodaj adres rozliczeniowy (Automatic Translation)
 add-block=Add Block (Automatic Copy)
 add-blog-entry=Dodaj wpis do bloga
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Dodaj zakładkę
 add-calendar=Dodaj kalendarz
 add-calendar-booking=Dodaj wydarzenie
@@ -361,6 +362,7 @@ add-document-type=Dodaj typ dokumentów
 add-domain=Dodaj domenę (Automatic Translation)
 add-draft=Dodaj pochówek (Automatic Translation)
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Dodawanie elementów (Automatic Translation)
 add-event=Dodaj zdarzenie
 add-existing-account=Dodawanie istniejącego konta (Automatic Translation)
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Czy na pewno chcesz de
 are-you-sure-you-want-to-deactivate-the-selected-users=Na pewno chcesz wyłączyć wybranych użytkowników?
 are-you-sure-you-want-to-deactivate-the-user=Czy na pewno chcesz dezaktywować użytkownika? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Czy na pewno chcesz dezaktywować tego użytkownika? (Automatic Translation)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Czy na pewno chcesz usunąć aplikację? Nie ma żadnych autoryzacji ani skojarzonych tokenów. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Czy na pewno chcesz usunąć aplikację? Ta akcja odwołuje 1 autoryzacji i skojarzone tokeny. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blogi
 blogs-util=Blogi Util (Automatic Translation)
 blogs-util-help=Zawiera metody narzędziowe dostępu do bieżących wpisów blogu. (Automatic Translation)
 blogs-with-this-category=Blogs with This Category (Automatic Copy)
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Zawartość i obrazek
 body-bg=Tło ciała (Automatic Translation)
 body-color=Kolor ciała (Automatic Translation)
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filter by Item Type (Automatic Copy)
 filter-by-state=Filtruj według stanu (Automatic Translation)
 filter-by-subtype=Filtruj według podtypu (Automatic Translation)
 filter-by-type=Filtruj według typu (Automatic Translation)
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filtruj kontakty
 filter-field=Pole filtru (Automatic Translation)
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Role
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Selektor ról (Automatic Translation)
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=Wydawca RSS (Automatic Translation)
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=Administrator SAML (Automatic Translation)
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Eksperyment segmentów (Automatic Translation)
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Symulacja segmentów (Automatic Translation)
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segmenty (Automatic Translation)
@@ -7730,6 +7737,7 @@ search-documents=Szukaj dokumentów
 search-engine-helper-configuration-name=Pomocnik silnika (Automatic Translation)
 search-engine-optimization=Pozycjonowanie w wyszukiwarkach
 search-engine-vendor=Dostawca wyszukiwarki (Automatic Translation)
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Wyszukaj podobny artykuł. (Automatic Translation)
 search-for-account=Wyszukaj konto (Automatic Translation)
 search-for-an-assignee=Wyszukiwanie cesjonariusza (Automatic Translation)
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Domyślna nazwa wpisu SAP w systemie (Automatic Tr
 system-default-sap-entry-service-signatures=Domyślne podpisy usługi wpisu SAP w systemie (Automatic Translation)
 system-ldap-configuration-name=Połączenia (Automatic Translation)
 system-maximum-number-of-tags-per-asset-description=Ustaw maksymalną liczbę tagów, które zostaną automatycznie dodane do pojedynczego zasobu. Ustaw wartość 0, jeśli nie ma limitu. (Automatic Translation)
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Role witryny
 system-user-password-sap-entry-description=Hasło użytkownika systemu Opis wpisu SAP (Automatic Translation)
 system-user-password-sap-entry-name=Nazwa wpisu hasła użytkownika systemu SAP (Automatic Translation)
