--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Adicionar estimativa de disponibilidade (Automatic Tra
 add-billing-address=Adicionar endereço de faturamento (Automatic Translation)
 add-block=Add Block (Automatic Copy)
 add-blog-entry=Adicionar Novo Post
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Adicionar Favorito
 add-calendar=Adicionar Calendário
 add-calendar-booking=Adicionar Evento
@@ -361,6 +362,7 @@ add-document-type=Adicionar Tipo de Documento
 add-domain=Adicionar Domínio
 add-draft=Adicionar rascunho
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Adicionar elementos (Automatic Translation)
 add-event=Adicionar Evento
 add-existing-account=Adicionar conta existente (Automatic Translation)
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Tem certeza de que des
 are-you-sure-you-want-to-deactivate-the-selected-users=Confirma que pretende desactivar os utilizadores selecionados?
 are-you-sure-you-want-to-deactivate-the-user=Tem certeza que deseja desativar o usuário? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Confirma que pretende desactivar este utilizador?
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Tem certeza de que deseja excluir o aplicativo? Não há autorizações ou tokens associados. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Tem certeza de que deseja excluir o aplicativo? Esta ação revoga 1 autorização e tokens associados. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blogs (Automatic Translation)
 blogs-util=Utilitário de Blogs
 blogs-util-help=Fornece métodos utilitários para aceder a entradas do blog atual.
 blogs-with-this-category=Blogs with This Category (Automatic Copy)
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Corpo e Imagem
 body-bg=Fundo do corpo (Automatic Translation)
 body-color=Cor do corpo (Automatic Translation)
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filter by Item Type (Automatic Copy)
 filter-by-state=Filtrar por Estado
 filter-by-subtype=Filtro por Subtipo (Automatic Translation)
 filter-by-type=Filtrar por tipo (Automatic Translation)
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filtrar Contactos
 filter-field=Campo de filtro (Automatic Translation)
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Perfí
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Seletor de Funções (Automatic Translation)
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=Editor RSS (Automatic Translation)
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=Administrador SAML (Automatic Translation)
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Experimento de segmentos (Automatic Translation)
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Simulação de segmentos (Automatic Translation)
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segmentos (Automatic Translation)
@@ -7730,6 +7737,7 @@ search-documents=Pesquisar documentos
 search-engine-helper-configuration-name=Ajudante de motor (Automatic Translation)
 search-engine-optimization=Otimização do Motor de Busca
 search-engine-vendor=Fornecedor de mecanismos de busca (Automatic Translation)
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Pesquisar por um artigo semelhante.
 search-for-account=Busca por Conta (Automatic Translation)
 search-for-an-assignee=Procure por um Assignee (Automatic Translation)
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Nome de entrada SAP padrão do sistema (Automatic 
 system-default-sap-entry-service-signatures=Assinaturas padrão do serviço de entrada SAP padrão do sistema (Automatic Translation)
 system-ldap-configuration-name=conexão (Automatic Translation)
 system-maximum-number-of-tags-per-asset-description=Defina o número máximo de tags que serão automaticamente adicionadas a um único ativo. Definido para 0 se não houver limite. (Automatic Translation)
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Roles de Sistema
 system-user-password-sap-entry-description=Descrição de entrada SAP de senha do usuário do sistema (Automatic Translation)
 system-user-password-sap-entry-name=Nome de entrada SAP de senha de usuário do sistema (Automatic Translation)
