--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Adăugare estimare disponibilitate (Automatic Translat
 add-billing-address=Adăugare adresă facturare (Automatic Translation)
 add-block=Add Block (Automatic Copy)
 add-blog-entry=Adaugă Intrare în Blog
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Adaugă Marcaj
 add-calendar=Adăugare calendar (Automatic Translation)
 add-calendar-booking=Adăugare eveniment (Automatic Translation)
@@ -361,6 +362,7 @@ add-document-type=Nume Document
 add-domain=Adăugare domeniu (Automatic Translation)
 add-draft=Adăugare schiță (Automatic Translation)
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Adăugare elemente (Automatic Translation)
 add-event=Adaugă Eveniment
 add-existing-account=Adăugare cont existent (Automatic Translation)
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Sigur dezactivați con
 are-you-sure-you-want-to-deactivate-the-selected-users=Ești sigur că vrei să dezactivezi utilizatorii selectați?
 are-you-sure-you-want-to-deactivate-the-user=Sigur dezactivați utilizatorul? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Sigur dezactivați acest utilizator? (Automatic Translation)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Sigur ștergeți aplicația? Nu există autorizații sau token-uri asociate. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Sigur ștergeți aplicația? Această acțiune revocă 1 autorizație și token-uri asociate. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Bloguri
 blogs-util=Blog-uri utile (Automatic Translation)
 blogs-util-help=Furnizează metode utilitare pentru a accesa intrările curente ale blogului. (Automatic Translation)
 blogs-with-this-category=Blogs with This Category (Automatic Copy)
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Corp și Imagine
 body-bg=Fundal corp (Automatic Translation)
 body-color=Culoare corp (Automatic Translation)
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filter by Item Type (Automatic Copy)
 filter-by-state=Filtrare după stat (Automatic Translation)
 filter-by-subtype=Filtrare după subtip (Automatic Translation)
 filter-by-type=Filtrare după tip (Automatic Translation)
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filtrare persoane de contact (Automatic Translation)
 filter-field=Câmp filtru (Automatic Translation)
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Roluri
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Selector roluri (Automatic Translation)
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=Editor RSS (Automatic Translation)
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=SAML Admin (Automatic Translation)
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Experiment segmente (Automatic Translation)
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Simulare segmente (Automatic Translation)
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segmente (Automatic Translation)
@@ -7730,6 +7737,7 @@ search-documents=Cauta Documente
 search-engine-helper-configuration-name=Ajutor motor (Automatic Translation)
 search-engine-optimization=Optimizarea motorului de căutare (Automatic Translation)
 search-engine-vendor=Furnizor motor de căutare (Automatic Translation)
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Căutați un articol similar. (Automatic Translation)
 search-for-account=Căutare cont (Automatic Translation)
 search-for-an-assignee=Căutarea unui cesionar (Automatic Translation)
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Nume intrare SAP implicit sistem (Automatic Transl
 system-default-sap-entry-service-signatures=Semnături serviciu intrare SAP implicite de sistem (Automatic Translation)
 system-ldap-configuration-name=conexiune (Automatic Translation)
 system-maximum-number-of-tags-per-asset-description=Setați numărul maxim de etichete care vor fi adăugate automat la un singur activ. Setați la 0 dacă nu există nicio limită. (Automatic Translation)
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Reguli Scriere
 system-user-password-sap-entry-description=Descriere intrare SAP parolă utilizator sistem (Automatic Translation)
 system-user-password-sap-entry-name=Nume intrare SAP parolă utilizator sistem (Automatic Translation)
