--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Dodaj oceno razpoložljivosti (Automatic Translation)
 add-billing-address=Dodaj naslov za obračunavanje (Automatic Translation)
 add-block=Add Block (Automatic Copy)
 add-blog-entry=Dodaj zapis v blog
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Dodaj zaznamek
 add-calendar=Kalender toevoegen
 add-calendar-booking=Gebeurtenis toevoegen
@@ -361,6 +362,7 @@ add-document-type=Ima dokumenta
 add-domain=Dodaj domeno (Automatic Translation)
 add-draft=Dodaj osnutek (Automatic Translation)
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Dodajanje elementov (Automatic Translation)
 add-event=Dodaj dogodek
 add-existing-account=Dodajanje obstoječega računa (Automatic Translation)
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Ali ste prepričani, d
 are-you-sure-you-want-to-deactivate-the-selected-users=Ste prepričani, da želite deaktivirati izbrane uporabnike?
 are-you-sure-you-want-to-deactivate-the-user=Ali ste prepričani, da želite deaktiviranje uporabnika? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Ali ste prepričani, da želite deaktiviranje tega uporabnika? (Automatic Translation)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Ali ste prepričani, da želite izbrisati program? Ni dovoljenj ali povezanih žetonov. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Ali ste prepričani, da želite izbrisati program? S tem dejanjem se prekliče 1 avtorizacija in povezani žetoni. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Blogi
 blogs-util=Spletni dnevniki Util (Automatic Translation)
 blogs-util-help=Ponuja načine uporabnosti za dostop do trenutnih vnosov v spletni dnevnik. (Automatic Translation)
 blogs-with-this-category=Blogs with This Category (Automatic Copy)
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Vsebina in slika
 body-bg=Ozadje telesa (Automatic Translation)
 body-color=Barva telesa (Automatic Translation)
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filter by Item Type (Automatic Copy)
 filter-by-state=Filtriraj po stanju (Automatic Translation)
 filter-by-subtype=Filtriranje po podtipu (Automatic Translation)
 filter-by-type=Filtriraj po vrsti (Automatic Translation)
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filtriraj stike (Automatic Translation)
 filter-field=Polje filtra (Automatic Translation)
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Vloge
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Izbirnik vlog (Automatic Translation)
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=RSS Publisher (Automatic Translation)
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=SAML Admin (Automatic Translation)
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Poskus segmentov (Automatic Translation)
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Simulacija segmentov (Automatic Translation)
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segmentov (Automatic Translation)
@@ -7730,6 +7737,7 @@ search-documents=Išči dokumente
 search-engine-helper-configuration-name=Pomoč pri motorju (Automatic Translation)
 search-engine-optimization=Optimizacija iskalnika (Automatic Translation)
 search-engine-vendor=Dobavitelj iskalnika (Automatic Translation)
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Poiščite podoben članek. (Automatic Translation)
 search-for-account=Iskanje računa (Automatic Translation)
 search-for-an-assignee=Iskanje dodeljenega (Automatic Translation)
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Privzeto ime vnosa SAP sistema (Automatic Translat
 system-default-sap-entry-service-signatures=Sistemski privzeti podpisi storitev za vnos SAP (Automatic Translation)
 system-ldap-configuration-name=povezava (Automatic Translation)
 system-maximum-number-of-tags-per-asset-description=Nastavite največje število oznak, ki bodo samodejno dodane enemu sredstvom. Nastavite na 0, če ni omejitve. (Automatic Translation)
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Vloge za pisanje
 system-user-password-sap-entry-description=Opis vnosa gesla za uporabnika sistema SAP (Automatic Translation)
 system-user-password-sap-entry-name=Ime vnosa sap gesla za uporabnika sistema (Automatic Translation)
