--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Lägg till tillgänglighetsberäkning
 add-billing-address=Lägg till faktureringsadress
 add-block=Lägg till block
 add-blog-entry=Nytt blogginlägg
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Lägg till bokmärke
 add-calendar=Lägg till kalender
 add-calendar-booking=Lägg till händelse
@@ -361,6 +362,7 @@ add-document-type=Lägg till dokumenttyp
 add-domain=Lägg till domän
 add-draft=Lägg till utkast
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Lägg till element
 add-event=Lägg till händelse
 add-existing-account=Lägg till befintligt konto
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Vill du verkligen inak
 are-you-sure-you-want-to-deactivate-the-selected-users=Vill du verkligen avaktivera de valda användarna?
 are-you-sure-you-want-to-deactivate-the-user=Vill du verkligen inaktivera användaren?
 are-you-sure-you-want-to-deactivate-this-user=Vill du verkligen inaktivera den här användaren?
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Vill du verkligen ta bort applikationen? Det finns inga auktoriseringar eller associerade token.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Vill du verkligen ta bort applikationen? Den här åtgärden upphäver 1 auktorisering och associerade tokens.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Vill du verkligen ta bort applikationen? Den här åtgärden upphäver {0} auktoriseringar och associerade tokens.
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Bloggar
 blogs-util=Bloggverktyg
 blogs-util-help=Tillhandahåller verktygsmetoder för att komma åt nuvarande blogginlägg.
 blogs-with-this-category=Bloggar med den här kategorin
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Brödtext och bild
 body-bg=Kroppens bakgrund
 body-color=Kroppens färg
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filtrera efter objekttyp
 filter-by-state=Filtrera efter tillstånd
 filter-by-subtype=Filtrera efter undertyp
 filter-by-type=Filtrera efter typ
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filtrera samling
 filter-contacts=Filtrera kontakter
 filter-field=Filterfält
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Roller
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Rollväljare
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=RSS-publicerare
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=SAML-admin
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Segmentexperiment
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Segmentsimulering
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segment
@@ -7730,6 +7737,7 @@ search-documents=Sök dokument
 search-engine-helper-configuration-name=Motorhjälp
 search-engine-optimization=Sökmotoroptimering
 search-engine-vendor=Sökmotorleverantör
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Sök efter en liknande artikel.
 search-for-account=Sök efter konto
 search-for-an-assignee=Sök efter en uppdragsinnehavare
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Systemstandard för SAP-postnamn
 system-default-sap-entry-service-signatures=Systemstandard för SAP-posttjänstsignaturer
 system-ldap-configuration-name=Anslutning
 system-maximum-number-of-tags-per-asset-description=Ange det maximala antalet taggar som läggs till automatiskt i en enskild tillgång. Sätt värdet till 0 om det inte ska finnas någon begränsning.
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Platsroller
 system-user-password-sap-entry-description=Systemets användarlösenord för SAP-postbeskrivning
 system-user-password-sap-entry-name=Systemets användarlösenord för SAP-postnamn
