--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Kullanılabilirlik Tahmini Ekle (Automatic Translation
 add-billing-address=Fatura Adresi Ekle (Automatic Translation)
 add-block=Add Block (Automatic Copy)
 add-blog-entry=Blog İçeriği Ekle
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Yer İmi Ekle
 add-calendar=Takvim Ekle (Automatic Translation)
 add-calendar-booking=Olay Ekle (Automatic Translation)
@@ -361,6 +362,7 @@ add-document-type=Belge adı
 add-domain=Etki Alanı Ekle (Automatic Translation)
 add-draft=Taslak Ekle (Automatic Translation)
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Öğe Ekle (Automatic Translation)
 add-event=Etkinlik Ekle
 add-existing-account=Varolan Hesap Ekle (Automatic Translation)
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Seçili hesapları dev
 are-you-sure-you-want-to-deactivate-the-selected-users=Seçili kullanıcıları etkisiz hale getirmek/engellemek istediğinizden emin misiniz?
 are-you-sure-you-want-to-deactivate-the-user=Kullanıcıyı devre dışı bırakmak istediğinizden emin misiniz? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Bu kullanıcıyı devre dışı bırakmak istediğinizden emin misiniz? (Automatic Translation)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Uygulamayı silmek istediğinizden emin misiniz? Yetkilendirme veya ilişkili belirteç yok. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Uygulamayı silmek istediğinizden emin misiniz? Bu eylemler 1 yetkilendirmeyi ve ilişkili belirteçleri iptal eder. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Bloglar
 blogs-util=Bloglar Kullanımı (Automatic Translation)
 blogs-util-help=Geçerli blog girdilerine erişmek için yardımcı program yöntemleri sağlar. (Automatic Translation)
 blogs-with-this-category=Blogs with This Category (Automatic Copy)
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Gövde ve Şekil
 body-bg=Vücut Arka Planı (Automatic Translation)
 body-color=Vücut Rengi (Automatic Translation)
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filter by Item Type (Automatic Copy)
 filter-by-state=Duruma Göre Filtre Uygula (Automatic Translation)
 filter-by-subtype=Alt Tipe Göre Filtrele (Automatic Translation)
 filter-by-type=Türe Göre Filtre Uygula (Automatic Translation)
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Kişilere Filtre Uygula (Automatic Translation)
 filter-field=Filtre Alanı (Automatic Translation)
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Roller
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Rol Seçici (Automatic Translation)
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=RSS Yayımcısı (Automatic Translation)
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=SAML Yöneticisi (Automatic Translation)
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Segmentler Denemesi (Automatic Translation)
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Segment Simülasyon (Automatic Translation)
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Segment (Automatic Translation)
@@ -7730,6 +7737,7 @@ search-documents=Belgeleri Ara
 search-engine-helper-configuration-name=Motor Yardımcısı (Automatic Translation)
 search-engine-optimization=Arama Motoru Optimizasyonu (Automatic Translation)
 search-engine-vendor=Arama Motoru Satıcısı (Automatic Translation)
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Benzer bir makale arayın. (Automatic Translation)
 search-for-account=Hesap Ara (Automatic Translation)
 search-for-an-assignee=Atananı Arama (Automatic Translation)
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Sistem Varsayılan SAP Girdi Adı (Automatic Trans
 system-default-sap-entry-service-signatures=Sistem Varsayılan SAP Giriş Hizmeti İmzaları (Automatic Translation)
 system-ldap-configuration-name=bağlantı (Automatic Translation)
 system-maximum-number-of-tags-per-asset-description=Tek bir varlığa otomatik olarak eklenecek maksimum etiket sayısını ayarlayın. Sınır yoksa 0 olarak ayarlayın. (Automatic Translation)
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Görevleri Belirle
 system-user-password-sap-entry-description=Sistem Kullanıcı Parolası SAP Girdisi Açıklaması (Automatic Translation)
 system-user-password-sap-entry-name=Sistem Kullanıcı Parolası SAP Girdi Adı (Automatic Translation)
