--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Додати оцінку доступності (Auto
 add-billing-address=Додати адресу для виставлення рахунків (Automatic Translation)
 add-block=Add Block (Automatic Copy)
 add-blog-entry=Добавити запис у блоґ
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Добавити закладку
 add-calendar=Додати календар (Automatic Translation)
 add-calendar-booking=Додати подію (Automatic Translation)
@@ -361,6 +362,7 @@ add-document-type=Назва документу
 add-domain=Додати домен (Automatic Translation)
 add-draft=Додати чернетку (Automatic Translation)
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Додавання елементів (Automatic Translation)
 add-event=Добавити подію
 add-existing-account=Додати наявний обліковий запис (Automatic Translation)
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Ви дійсно ба
 are-you-sure-you-want-to-deactivate-the-selected-users=Ви впевнені у тому, що хочете відключити вибраних користувачів?
 are-you-sure-you-want-to-deactivate-the-user=Ви дійсно бажаєте вимкнути користувача? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Ви дійсно бажаєте вимкнути цього користувача? (Automatic Translation)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Справді видалити застосунок? Немає авторизації або пов'язаних маркерів. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Справді видалити застосунок? Ця дія скасовує 1 авторизацію та пов'язані з нею токени. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Щоденники
 blogs-util=Блоги Утіль (Automatic Translation)
 blogs-util-help=Надає службові методи доступу до поточних записів блогу. (Automatic Translation)
 blogs-with-this-category=Blogs with This Category (Automatic Copy)
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Тіло та зображення
 body-bg=Тло тіла (Automatic Translation)
 body-color=Колір тіла (Automatic Translation)
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filter by Item Type (Automatic Copy)
 filter-by-state=Фільтрувати за станом (Automatic Translation)
 filter-by-subtype=Фільтрувати за підтипом (Automatic Translation)
 filter-by-type=Фільтр за типом (Automatic Translation)
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Фільтрування контактів (Automatic Translation)
 filter-field=Поле фільтра (Automatic Translation)
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Рол
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Вибір ролей (Automatic Translation)
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=Видавець RSS (Automatic Translation)
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=Адміністратор SAML (Automatic Translation)
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Експеримент сегментів (Automatic Translation)
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Моделювання сегментів (Automatic Translation)
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Сегменти (Automatic Translation)
@@ -7730,6 +7737,7 @@ search-documents=Знайти документи
 search-engine-helper-configuration-name=Помічник двигуна (Automatic Translation)
 search-engine-optimization=Пошукова оптимізація (Automatic Translation)
 search-engine-vendor=Постачальник пошукової системи (Automatic Translation)
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Знайдіть подібну статтю. (Automatic Translation)
 search-for-account=Пошук бізнес-партнера (Automatic Translation)
 search-for-an-assignee=Пошук правонаступника (Automatic Translation)
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Ім'я запису SAP за промовчанн
 system-default-sap-entry-service-signatures=Системні підписи служби записів SAP за промовчанням (Automatic Translation)
 system-ldap-configuration-name=Підключення (Automatic Translation)
 system-maximum-number-of-tags-per-asset-description=Встановіть максимальну кількість тегів, які буде автоматично додано до одного активу. Встановіть значення 0, якщо немає обмежень. (Automatic Translation)
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Ролі дописувача
 system-user-password-sap-entry-description=Опис запису SAP пароля користувача системи (Automatic Translation)
 system-user-password-sap-entry-name=Ім'я запису SAP пароля користувача системи (Automatic Translation)
