--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -326,6 +326,7 @@ add-availability-estimate=Thêm Ước tính Tính khả dụng (Automatic Trans
 add-billing-address=Thêm Địa chỉ Thanh toán (Automatic Translation)
 add-block=Add Block (Automatic Copy)
 add-blog-entry=Blog
+add-blueprint=Add Blueprint (Automatic Copy)
 add-bookmark=Thêm đánh dấu
 add-calendar=Thêm Lịch (Automatic Translation)
 add-calendar-booking=Thêm Sự kiện (Automatic Translation)
@@ -361,6 +362,7 @@ add-document-type=Thêm loại tài liệu
 add-domain=Thêm Tên miền (Automatic Translation)
 add-draft=Thêm Bản nháp (Automatic Translation)
 add-duplicate-field=Add Duplicate Field {0} (Automatic Copy)
+add-element=Add Element (Automatic Copy)
 add-elements=Thêm Thành phần (Automatic Translation)
 add-event=Thêm sự kiện
 add-existing-account=Thêm Trương mục Hiện có (Automatic Translation)
@@ -871,6 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Bạn có chắc chắ
 are-you-sure-you-want-to-deactivate-the-selected-users=Bạn có chắc chắn là muốn vô hiệu hóa những người dùng đã chọn ?
 are-you-sure-you-want-to-deactivate-the-user=Bạn có chắc chắn muốn hủy kích hoạt người dùng không? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Bạn có chắc chắn muốn hủy kích hoạt người dùng này không? (Automatic Translation)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Bạn có chắc chắn muốn xóa bỏ ứng dụng không? Không có ủy quyền hoặc mã thông báo liên quan. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Bạn có chắc chắn muốn xóa bỏ ứng dụng không? Hành động này thu hồi 1 ủy quyền và mã thông báo liên quan. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
@@ -1302,6 +1306,7 @@ blogs-portlet-instance-configuration-name=Nhật ký (Blog)
 blogs-util=Blog Util (Automatic Translation)
 blogs-util-help=Cung cấp các phương pháp tiện ích để truy cập các mục blog hiện tại. (Automatic Translation)
 blogs-with-this-category=Blogs with This Category (Automatic Copy)
+blueprints=Blueprints (Automatic Copy)
 body-and-image=Nội dung và hình ảnh
 body-bg=Cơ thể nền (Automatic Translation)
 body-color=Màu cơ thể (Automatic Translation)
@@ -3674,6 +3679,7 @@ filter-by-item-type=Filter by Item Type (Automatic Copy)
 filter-by-state=Lọc theo tiểu bang (Automatic Translation)
 filter-by-subtype=Lọc theo subtype (Automatic Translation)
 filter-by-type=Lọc theo Loại (Automatic Translation)
+filter-by-visibility=Filter by Visibility (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Lọc Liên hệ (Automatic Translation)
 filter-field=Trường Bộ lọc (Automatic Translation)
@@ -4771,6 +4777,7 @@ javax.portlet.title.com_liferay_roles_admin_web_portlet_RolesAdminPortlet=Vai tr
 javax.portlet.title.com_liferay_roles_selector_web_portlet_RolesSelectorPortlet=Bộ chọn Vai trò (Automatic Translation)
 javax.portlet.title.com_liferay_rss_web_portlet_RSSPortlet=Nhà xuất bản RSS (Automatic Translation)
 javax.portlet.title.com_liferay_saml_web_internal_portlet_SamlAdminPortlet=Quản trị VIÊN SAML (Automatic Translation)
+javax.portlet.title.com_liferay_search_experiences_web_internal_blueprint_portlet_SXPBlueprintPortlet=Blueprints (Automatic Copy)
 javax.portlet.title.com_liferay_segments_experiment_web_internal_portlet_SegmentsExperimentPortlet=Thử nghiệm phân đoạn (Automatic Translation)
 javax.portlet.title.com_liferay_segments_simulation_web_internal_portlet_SegmentsSimulationPortlet=Mô phỏng phân đoạn (Automatic Translation)
 javax.portlet.title.com_liferay_segments_web_internal_portlet_SegmentsPortlet=Phân đoạn (Automatic Translation)
@@ -7730,6 +7737,7 @@ search-documents=Tìm kiếm tài liệu
 search-engine-helper-configuration-name=Bộ trợ giúp động cơ (Automatic Translation)
 search-engine-optimization=Tối ưu bộ máy tìm kiếm
 search-engine-vendor=Nhà cung cấp công cụ tìm kiếm (Automatic Translation)
+search-experiences=Search Experiences (Automatic Copy)
 search-for-a-similar-article=Tìm kiếm một bài viết tương tự. (Automatic Translation)
 search-for-account=Tìm kiếm Tài khoản (Automatic Translation)
 search-for-an-assignee=Tìm kiếm người được chuyển nhượng (Automatic Translation)
@@ -8610,6 +8618,7 @@ system-default-sap-entry-name=Tên mục SAP mặc định của hệ thống (A
 system-default-sap-entry-service-signatures=Chữ ký dịch vụ nhập SAP mặc định của hệ thống (Automatic Translation)
 system-ldap-configuration-name=Kết nối (Automatic Translation)
 system-maximum-number-of-tags-per-asset-description=Đặt số lượng thẻ tối đa sẽ được tự động thêm vào một tài sản. Đặt thành 0 nếu không có giới hạn. (Automatic Translation)
+system-read-only-elements-cannot-be-deleted=System read-only elements cannot be deleted. (Automatic Copy)
 system-roles=Các vai trò của site
 system-user-password-sap-entry-description=Mô tả mục nhập SAP mật khẩu người dùng hệ thống (Automatic Translation)
 system-user-password-sap-entry-name=Mật khẩu người dùng hệ thống Tên mục SAP (Automatic Translation)
